# Orator

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  ENGINEERING_AUDIT.md  LICENSE  README.md  SECURITY.md  TEST_REVIEW_SPEC.md  orator.toml  task_worker_interfaces.txt
.github/: copilot-instructions.md  copilot-instructions.zh-CN.md
.specify/: test-review-protocol.md
docs/: ASR_OPERATOR_ANALYSIS.md  CPP20_SCAN_REPORT.md  PERFORMANCE.md
specs/: AGENTS.md  PROJECT_STATE.md
src/: AGENTS.md  main.cc  ws_main.cc
test/: CMakeLists.txt  README.md  eval_reference.cc  run_py_test.py  test_asr.cc  test_asr_decoder.cc  test_auditory_stream.cc  test_bpe.cc  test_comprehensive_timeline.cc  test_comprehensive_timeline_access.h  test_config.cc  test_diar_stream.cc  test_gpu_lock.cc  test_integration.py  test_mel.cc  test_pipeline.cc  test_preprocessor.cc  test_protocol_timeline.cc  test_protocol_types.cc  test_safetensors.cc  test_scheduler.cc  test_session_store.cc  test_timeline.cc  test_vad.cc  test_ws_business.py  test_ws_real_audio.py  ws_comprehensive_test.py  ws_test_harness.py
test/archive/spec013-speaker-candidates/: README.md  test_speaker_bounded_local_run_voiceprint_candidate.py  test_speaker_bracketed_local_churn_candidate.py  test_speaker_bracketed_local_phrase_candidate.py  test_speaker_clean_gallery_candidate.py  test_speaker_complete_edge_contribution_candidate.py  test_speaker_complete_source_voiceprint_candidate.py  test_speaker_direct_fusion_candidate.py  test_speaker_expanded_local_run_phrase_candidate.py  test_speaker_local_channel_island_candidate.py  test_speaker_maximal_multislot_envelope_candidate.py  test_speaker_phrase_led_outer_abstention_candidate.py  test_speaker_posterior_bounded_phrase_candidate.py  test_speaker_primary_run_phrase_anchor_candidate.py  test_speaker_prototype_local_veto_candidate.py  test_speaker_punctuation_phrase_candidate.py  test_speaker_raw_authoritative_candidate.py  test_speaker_relative_top1_phrase_candidate.py  test_speaker_relative_top1_phrase_expansion_candidate.py  test_speaker_replay_voiceprint_candidate.py  test_speaker_reviewed_overlay_candidate.py  test_speaker_rotation_candidate.py  test_speaker_secondary_channel_edge_closure_candidate.py  test_speaker_secondary_channel_phrase_candidate.py  test_speaker_sequence_candidate.py  test_speaker_short_phrase_candidate.py  test_speaker_sliding_voiceprint.py  test_speaker_temporal_clean_gallery.py  test_speaker_vad_active_edge_candidate.py  test_speaker_vad_complete_contribution_candidate.py  test_speaker_vad_utterance_candidate.py
test/integration/cc/: test_business_speaker_pipeline.cc  test_comprehensive_timeline.cc  test_registration.cc  test_typed_evidence_flow.cc
test/integration/py/: run_ws_integration.py  test_closing_ledger.py  test_repro_manifest.py  test_speaker_adjacent_subminimum_clause_candidate.py  test_speaker_bracketed_unknown_phrase_candidate.py  test_speaker_business_replay_inputs.py  test_speaker_business_review_packet.py  test_speaker_complete_local_phrase_candidate.py  test_speaker_complete_phrase_cross_prototype_candidate.py  test_speaker_complete_source_unanimous_phrase_candidate.py  test_speaker_complete_vad_phrase_challenge_candidate.py  test_speaker_contextual_vad_phrase_challenge_candidate.py  test_speaker_decision_evidence.py  test_speaker_dual_gallery_phrase_candidate.py  test_speaker_edge_anchor_trimmed_phrase_candidate.py  test_speaker_frozen_evidence.py  test_speaker_gallery_independence_inputs.py  test_speaker_identity_snapshot_evidence.py  test_speaker_multiprototype_evidence.py  test_speaker_multiresolution_phrase_candidate.py  test_speaker_phrase_reaggregation_candidate.py  test_speaker_primary_aligned_island_candidate.py  test_speaker_primary_top1_replay_inputs.py  test_speaker_residual_evidence_packet.py  test_speaker_robust_gallery_evidence.py  test_speaker_short_primary_evidence.py  test_speaker_vad_edge_run_candidate.py  test_ws_unified_manifest.py
test/unit/core/: test_audio.cc  test_bpe.cc  test_buffer.cc  test_config.cc  test_json.cc  test_memory.cc  test_pipeline_registry.cc  test_postprocess.cc  test_reference.cc  test_safetensors.cc  test_session_store.cc  test_shared_buffer.cc  test_speaker_db.cc  test_storage.cc  test_tensor.cc  test_time_base.cc
test/unit/infrastructure/: test_gpu_lock.cc  test_http_server.cc  test_scheduler.cc  test_websocket.cc
test/unit/model/: test_aligner_audio.cc  test_aligner_e2e.cc  test_aligner_lm.cc  test_aligner_mel.cc  test_aligner_tokenizer.cc  test_asr_decoder.cc  test_asr_encoder.cc  test_asr_gemm.cc  test_asr_ops.cc  test_asr_weights.cc  test_forced_align_decode.cc  test_gemm_batched.cu  test_kernels.cc  test_mel.cc  test_preprocessor.cc  test_qwen3.cc  test_titanet.cc  test_whisper_mel.cc
test/unit/pipeline/: test_asr_worker.cc  test_auditory_stream.cc  test_diar_async_stream.cc  test_diar_stream.cc  test_diar_sync_v21.cc  test_periodic_deadline.cc  test_pipeline_audio_cache.cc  test_retained_audio.cc  test_speaker_evidence_stage.cc  test_speaker_id_stage.cc  test_speaker_identity_replay_input.cc  test_vad.cc
test/unit/protocol/: test_protocol_timeline.cc  test_protocol_types.cc  test_topic_router.cc
test/utils/: asr_vad_cpu.cc  asr_vad_cpu.h  test_business_speaker_pipeline_access.h  test_comprehensive_timeline_access.h  test_speaker_evidence_stage_access.h
test/web/: model_contract.test.mjs
tools/: README.md  asr_preproc_infer.py  asr_strategy_autotest.py  asr_stream_incremental_probe.cc  asr_stream_test.cc  cer.py  convert_silero_vad_to_orator_safetensors.py  dump_activations.py  dump_streaming.py  eval_speaker_acc.py  gemm_bench.cu  param_tune.py  reference_infer.py  sweep_diar_params.py  torchenv.sh  verify_conformer.cc  verify_conformer_full.cc  verify_decoder.cc  verify_forward.cc  verify_mel.cc  verify_pipeline.cc  verify_preencode.cc  verify_streaming.cc  verify_streaming_incremental.cc  ws_client_test.py  ws_dump_segments.py  ws_raw_capture.py  ws_stream_client.py  (+2 more)
(+534 files in other folders)
